# JsonDesLib

./: .gitignore  CMakeLists.txt  main.cc
PAL/: CMakeLists.txt
PAL/HTTP/HTTPClient/: .CURLHTTP.h.swp  CURLHTTP.h  HTTPClientFactory.cc  HTTPClientFactory.h  HTTPWINClientFactory.cc  Request.h  Response.h  WINHTTP.h
PAL/HTTPClient/: CURLHTTP.h  HTTPClientFactory.cc  HTTPClientFactory.h  HTTPWINClientFactory.cc  IHTTPClient.h  WINHTTP.h
PAL/JSON/rapidjson/: Parser.cc  Parser.h
PAL/include/: AbstractFactory.h  CMakeLists.txt  IParser.h  IStream.h  ParserFactory.cc  ParserFactory.h  StreamFactory.cc  StreamFactory.h
PAL/include/factories/: HTTPClientFactory.cc  HTTPClientFactory.h  HTTPWINClientFactory.cc  ParserFactory.cc  ParserFactory.h  StreamFactory.cc  StreamFactory.h
PAL/include/interfaces/: IHTTPClient.h  IParser.h  IStream.h
PAL/stream/HTTPStreamBuffer/: CURLHTTP.h  HTTPClientFactory.cc  HTTPClientFactory.h  HTTPStreamBuffer.cc  HTTPStreamBuffer.h  HTTPWINClientFactory.cc  IHTTPClient.h  Request.h  Response.h  WINHTTP.h
PAL/stream/streamBuffer/: StreamBuffer.cc  StreamBuffer.h
doc/: AbstractFactory.uml  AbstractFactory.~ml
gtest/: CMakeLists.txt  test.cc  test.h
include/: Engine.h  ISerializable.h  IStatus.h
test/: .TestRunner.h.swp  TestRunner.h  Timer.h  hello_test.cc
test/objects/: Object.h  Object2.h  Object3.h  ObjectBase.h  Restaurants.h  Segment.h  Timestep.h  legacyIds.h
test/testData/: test1.json  test2.json  test3.json
